aggiunnto elimina e riapri progetto e sistemato aggiungi task